<resources>
    <string name="app_name">Shopang</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum_medium">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam efficitur consequat elit, id ultricies ipsum malesuada vel. Sed luctus diam quis congue laoreet. Morbi eget eros nec lectus scelerisque sagittis. Aliquam eget quam mi. Nulla facilisi.
    </string>

    <string name="skip">SKIP</string>
    <string name="or">또는</string>
    <string name="name">이름</string>
    <string name="search">검색</string>
    <string name="sign_out">로그아웃</string>
    <string name="postcode_and_address">우편번호 및 주소</string>
    <string name="address">배송지 주소</string>
    <string name="detail_address">상세주소</string>
    <string name="detail_info">상세정보</string>
    <string name="no_address">주소가 없습니다</string>
    <string name="edit_profile">프로필 수정</string>
    <string name="set_address">배송 주소 설정</string>
    <string name="order_and_shipping_detail">주문 및 배송 상세</string>
    <string name="input_detail_address">동/호수 입력</string>
    <string name="phone_number">휴대폰 번호</string>
    <string name="best_seller">베스트셀러</string>
    <string name="nutrition_facts">영양정보</string>
    <string name="total">합계</string>
    <string name="final_payment_price">최종 결제 금액</string>
    <string name="empty_wish_list">위시리스트가 비었습니다</string>
    <string name="empty_cart_list">장바구니가 비었습니다</string>
    <string name="empty_order_list">주문목록이 비었습니다</string>
    <string name="empty_payment_method">결제수단이 없습니다</string>
    <string name="empty_payment_address">주소가 없습니다</string>
    <string name="empty_search_list">결과 없음</string>
    <string name="price">%,d원</string>
    <string name="default_price">0원</string>
    <string name="product_name">%1$s, %2$s, %3$d%4$s</string>
    <string name="order_product">주문상품</string>
    <string name="order_product_name">%1$s, %2$s, %3$d%4$s</string>
    <string name="order_id">주문번호: %s</string>
    <string name="order_products">%,d원 · %s 개</string>
    <string name="count_down">00:%1$02d</string>
    <string name="nutrition_value">%.0fg</string>
    <string name="calories_format">%d Kcal</string>
    <string name="payment">Payment</string>
    <string name="payment_method">결제수단</string>
    <string name="order_status_placed">상품준비중</string>
    <string name="order_status_confirmed">배송시작</string>
    <string name="order_status_shipped">배송중</string>
    <string name="order_status_delivered">배송완료</string>
    <string name="test_credit_card_number">1234–5678–****–****</string>
    <string name="my_wish">위시리스트</string>
    <string name="my_cart">장바구니</string>
    <string name="my_profile">내 프로필</string>
    <string name="my_order_and_payment">주문 및 결제</string>
    <string name="menu_home">HOME</string>
    <string name="menu_wish">WISH</string>
    <string name="menu_cart">CART</string>
    <string name="menu_user">MY</string>
    <string name="title_1">한 번의 클릭으로 구매하세요,</string>
    <string name="title_2">배송 추적,</string>
    <string name="title_3">안전하고 신속한 배송,</string>
    <string name="description_1">간편한 구매 프로세스와\n다양한 결제 옵션</string>
    <string name="description_2">주문한 제품의 배송 상황을\n실시간으로 확인</string>
    <string name="description_3">엄격한 품질 관리와\n신속한 배송 서비스</string>
    <string name="action_start">시작하기</string>
    <string name="action_back">이전</string>
    <string name="action_close">닫기</string>
    <string name="action_sign_in">로그인</string>
    <string name="action_naver">네이버로 시작하기</string>
    <string name="action_google">Google로 시작하기</string>
    <string name="action_cancel">취소</string>
    <string name="action_confirm">확인</string>
    <string name="action_exit">나가기</string>
    <string name="action_keep">계속</string>
    <string name="action_yes">네</string>
    <string name="action_no">아니오</string>
    <string name="action_resend">재전송</string>
    <string name="action_modify_profile">프로필 수정</string>
    <string name="action_add_credit_card">결제 카드 추가하기</string>
    <string name="action_order_list">주문목록</string>
    <string name="action_address_list">배송 주소 설정</string>
    <string name="action_app_info">정보</string>
    <string name="action_sign_out">로그아웃</string>
    <string name="action_save">저장하기</string>
    <string name="action_set">설정하기</string>
    <string name="action_search_address">주소찾기</string>
    <string name="action_order">주문하기</string>
    <string name="action_add_cart">장바구니 담기</string>
    <string name="action_add_all_to_cart">모두 장바구니 담기</string>
    <string name="action_payment">결제하기</string>
    <string name="action_order_detail">주문상세</string>
    <string name="action_continue">계속하기</string>
    <string name="error_msg">오류가 발생했습니다, 나중에 다시 시도해주세요</string>
    <string name="error_auth_failed">인증 번호가 일치하지 않습니다</string>
    <string name="error_create_account">계정을 생성할 수 없습니다, 나중에 다시 시도해주세요</string>
    <string name="error_max_quantity_reached">최대 구매 가능한 수량입니다</string>
    <string name="error_set_address">배송 주소를 설정해주세요</string>
    <string name="success_create_account">계정이 생성됨</string>
    <string name="success_sign_out">로그아웃됨</string>
    <string name="success_updated_account">업데이트됨</string>
    <string name="success_address">배송 주소 설정됨</string>
    <string name="success_add_to_cart">장바구니에 추가됨</string>
    <string name="success_add_to_wish">위시리스트에 추가됨</string>
    <string name="success_delete_from_wish">위시리스트에서 삭제됨</string>
    <string name="success_order">주문이 완료되었습니다</string>
    <string name="chk_internet_connection">인터넷 연결을 확인해주세요</string>
    <string name="chk_empty_postcode_and_address">우편번호 또는 주소를 확인해주세요</string>
    <string name="chk_empty_user_name">이름을 입력해주세요</string>
    <string name="chk_empty_phone_number">휴대폰 번호를 입력해주세요</string>
    <string name="chk_valid_phone_number">유효하지 않은 휴대폰 번호입니다, 입력한 번호를 다시 한 번 확인해주세요</string>
    <string name="chk_code_from_valid_phone_number">문자 메시지를 통해 %s 번호로 전송된\n인증 코드를 입력하세요</string>
    <string name="auth_dialog_title">요청 횟수 한도 초과</string>
    <string name="auth_dialog_msg">1분 후에 다시 시도해주세요</string>
    <string name="phone_auth_title">인증번호 전송 완료</string>
    <string name="phone_auth_dialog_title">나가시겠습니까?</string>
    <string name="phone_auth_dialog_msg">지금 종료하면 최대 1분 후 재시작할 수 있습니다\n계속 진행할까요?</string>
    <string name="phone_auth_failed_dialog_title">인증 실패</string>
    <string name="phone_auth_failed_dialog_msg">반복적으로 코드를 잘못 입력했습니다\n처음으로 돌아가 다시 시도해 주세요</string>
    <string name="cart_delete_dialog_msg">상품을 삭제하시겠습니까?</string>
    <string name="user_dialog_msg">로그아웃 하시겠습니까?</string>
    <string name="offline">인터넷 연결: 오프라인</string>
    <string name="online">인터넷 연결: 온라인</string>
    <string name="dev">Ninezero</string>
    <string name="dev_info">개발자 정보</string>
    <string name="dev_id">(youuungh)</string>
    <string name="open_source">오픈소스 라이선스</string>
    <string name="open_source_detail">오픈소스 라이선스 상세정보</string>
    <string name="extra">기타</string>
</resources>