<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="com.ninezero.shopang.view.main.about.AboutFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.main.about.AboutFragment">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back"
            style="@style/Widget.Shopang.Button.IconButton"
            android:layout_marginStart="@dimen/_8sdp"
            android:onClick="@{()-> fragment.onBackPressed()}"
            app:icon="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toTopOf="@id/header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/action_app_info"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/back"
            app:layout_constraintStart_toEndOf="@id/back"
            app:layout_constraintTop_toTopOf="@id/back" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:overScrollMode="ifContentScrolls">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_6sdp">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/transparent"
                    app:cardElevation="0dp"
                    app:cardUseCompatPadding="true"
                    app:strokeWidth="1dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/infoLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/google_sans_medium"
                            android:paddingHorizontal="16dp"
                            android:paddingVertical="12dp"
                            android:text="@string/dev_info"
                            android:textColor="?attr/colorPrimary"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/infoContainer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="@{()-> fragment.openGit()}"
                            app:cardBackgroundColor="@color/transparent"
                            app:cardElevation="0dp"
                            app:layout_constraintTop_toBottomOf="@id/infoLabel"
                            app:strokeColor="?android:attr/colorButtonNormal"
                            app:strokeWidth="0dp">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingVertical="16dp">

                                <ImageView
                                    android:id="@+id/infoImage"
                                    android:layout_width="42dp"
                                    android:layout_height="42dp"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:srcCompat="@drawable/ic_github" />

                                <com.google.android.material.textview.MaterialTextView
                                    android:id="@+id/devName"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/google_sans_regular"
                                    android:text="@string/dev"
                                    android:textSize="@dimen/_16sdp"
                                    android:textStyle="bold"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@id/infoImage" />

                                <com.google.android.material.textview.MaterialTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/google_sans_regular"
                                    android:text="@string/dev_id"
                                    android:textSize="@dimen/_11sdp"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@id/devName" />

                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </com.google.android.material.card.MaterialCardView>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/transparent"
                    app:cardElevation="0dp"
                    app:cardUseCompatPadding="true"
                    app:strokeWidth="1dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/labelOpenSource"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="16dp"
                            android:paddingVertical="12dp"
                            android:text="@string/extra"
                            android:textColor="?attr/colorPrimary"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/openSourceContainer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="@{()-> fragment.openSource()}"
                            app:cardBackgroundColor="@color/transparent"
                            app:cardElevation="0dp"
                            app:layout_constraintTop_toBottomOf="@id/labelOpenSource"
                            app:strokeWidth="0dp">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingHorizontal="16dp"
                                android:paddingVertical="16dp">

                                <ImageView
                                    android:id="@+id/licenseIcon"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:padding="8dp"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:srcCompat="@drawable/ic_license" />

                                <com.google.android.material.textview.MaterialTextView
                                    android:id="@+id/licenseName"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/_16sdp"
                                    android:text="@string/open_source"
                                    android:textSize="@dimen/_13sdp"
                                    app:layout_constraintLeft_toRightOf="@id/licenseIcon"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <com.google.android.material.textview.MaterialTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/_16sdp"
                                    android:alpha="0.38"
                                    android:text="@string/open_source_detail"
                                    android:textSize="13sp"
                                    app:layout_constraintLeft_toRightOf="@id/licenseIcon"
                                    app:layout_constraintTop_toBottomOf="@id/licenseName" />

                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </com.google.android.material.card.MaterialCardView>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="?attr/actionBarSize" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.06" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.94" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>