<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="adapter"
            type="com.ninezero.shopang.view.main.wish.WishAdapter" />
        <variable
            name="fragment"
            type="com.ninezero.shopang.view.main.wish.WishFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.main.wish.WishFragment">

        <TextView
            android:id="@+id/headline"
            style="@style/TextAppearance.Shopang.HeadlineSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_wish"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/header"
            app:layout_constraintStart_toStartOf="@id/start" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvWish"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingTop="@dimen/_6sdp"
            android:overScrollMode="never"
            android:orientation="vertical"
            android:adapter="@{adapter}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/item_wish" />

        <View
            android:id="@+id/anchor"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_gravity="start"
            android:background="?attr/colorTertiary"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/addAllToCartContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent "/>

        <LinearLayout
            android:id="@+id/addAllToCartContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_2sdp"
            android:paddingBottom="@dimen/_4sdp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addAllToCart"
                style="@style/Widget.Shopang.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:text="@string/action_add_all_to_cart"
                android:onClick="@{()-> fragment.addWishesToCart()}"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/emptyContainer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingBottom="?attr/actionBarSize"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/emptyWish"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_250sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_empty_wish_list" />

            <TextView
                android:id="@+id/emptyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_wish_list" />

        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="?attr/actionBarSize" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.06"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.94"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>